--- a/style.css
+++ b/style.css
@@ -141,3 +141,26 @@ h1{
     margin-top: 7px;
     margin-left: 30px;
 }
+.flex{
+    display: flex;
+    color: grey;
+    margin-top: 100px;
+    justify-content: space-evenly;
+    line-height: 35px;
+}
+.images{
+    filter: invert(0.5);
+}
+.btn{
+    height: 40px;
+    width: 100px;
+    background-color: transparent;
+    color: gray;
+    border: 1px solid grey;
+    margin-top: 20px;
+}
+.done{
+    color: grey;
+    margin-left: 198px;
+    margin-top: 30px;
+}
