--- a/style.css
+++ b/style.css
@@ -1,166 +1,392 @@
-*{
-    margin: 0px;
-    padding: 0px;
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Open+Sans:wght@300;400&family=Phudu:wght@300;400&family=Poppins:wght@300;400&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&family=Titillium+Web:ital,wght@1,200;1,300&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
-body{
+
+body {
     background-color: black;
+    overflow-x: hidden;
 }
-#netflix{
-    height: 30px;
+
+body::-webkit-scrollbar {
+    display: none;
 }
-.bi{
-    background-image: url(/assets/Title-Image.png);
-    background-size: cover;
-    height: 820px;
-    box-shadow: black;
-}
-.head{
+
+.flex {
     display: flex;
 }
-.sec1{
-    margin-top: 18px;
-    margin-left: 35px;
-    width: 30%;
+.flex-column{
     display: flex;
-    justify-content: center;
-    color: white;
-    font-size: large;
+    flex-direction: column;
 }
-.icons{
-    display: flex;
-    width: 40%;
-    justify-content: space-evenly;
-    margin-left:900px;
-    margin-right: 30px;
-    margin-top: 25px;
-    height: 20px;
+.top {
+    background-image: url(assets/Title-Image.png);
+    background-size: 100% 100%;
+    height: 115vmin;
+    width: 100%;
+    box-shadow: 0 10px 50px 10px  black inset;
 }
-.symbol{
-    display: flex;
-    margin-top: 350px;
-    margin-left: 68px;
+
+#netflix-txt {
+    width: 7vmax;
+    height: 1.8vmax;
+    margin-right: 1vmax;
 }
-#n{
-    height: 35px;
-}
-#show{
-    margin-left: 15px;
-    margin-top: 5px;
-    color: white;
-}
-h1{
-    color: white;
-    margin-top: -15px;
-    margin-left: 60px;
-    font-size: 180px;
+
+.nav-left p {
+    margin-left: 1.5vmax;
+    color: black;
     font-weight: bold;
 }
-#play{
+
+.nav-left {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar {
+    justify-content: space-between;
+    padding-left: 3.2vmax;
+    padding-top: 1.3vmax;
+}
+.nav-right{
+    align-items: center;
+    margin-right: 1.5vmax;
+}
+.nav-right img {
+    width: 1.5vmax;
+    height: 1.5vmax;
+    margin-right: 1.5vmax;
+}
+
+#angrybird {
+    height: 2.4vmax;
+    width: 2.1vmax;
+}
+
+.big-txt{
+    color: white;
+    position: absolute;
+    margin-top: 24vmax;
+    margin-left: 4.5vmax;
+}
+
+.netflix-logo{
+    width: 1.5vmax;
+    height: 2.2vmax;
+    margin-right: 1.3vmax;
+}
+.show-txt{
+    font-size: large;
+    margin-top: 0.4vmax;
+}
+#Maid{
+    font-size:10.5vmax;
+    font-weight: bolder;
+    margin-left: -1vmax;
+    margin-top: -1.6vmax;
+}
+
+button{
+    align-items: center;
+    font-weight: bold;
+}
+.play{
     background-color: white;
-    height: 35px;
-    width: 80px;
+    height: 3vmax;
+    width: 5vmax;
+    margin-right: 1.5vmax;
     border: none;
     border-radius: 5px;
-    margin-left: 60px;
+    align-items: center;
     font-weight: bold;
-    padding-top: 5px;
     display: flex;
-    justify-content: center;
 }
-#info{
-    height: 35px;
+.info{
+    background-color: #8C8D91;
+    opacity: 70%;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    width: 9vmax;
+    height: 3vmax;
+    font-weight: bold;
+    display: flex;
+}
+#play-btn{
+    width:1.3vmax;
+    height: 1.5vmax;
+    margin-right: 0.5vmax;
+    margin-left: 0.8vmax;
+}
+#info-btn{
+    margin-right: 1vmax;
+    margin-left: 1.3vmax;
+}
+
+.add{
+    position: absolute;
+    margin-top: 45vmax;
+    display: flex;
+    width: 100vw;
+    justify-content: flex-end;
+}
+.add-png{
+    margin-right: 1.5vmax;
+}
+
+/*------- Middle body css------- */
+.main-body{
+    margin-top:-6.3vmax;
+    color: white;
+}
+.category{
+    font-size: larger;
+    font-weight: bold;
+    margin-left: 4.5vmax;
+    margin-bottom: 1vmax;
+}
+.see-again , .top-10{
+    margin-bottom: 4vmax;
+}
+.imgs-row{
+    margin-right:-7vmax;
+}
+.imgs-2nd-row{
+    margin-left: -1.5vmax;
+    height: 14vmax;
+    width: 12vmax;
+}
+.imgs-2nd-row-1st{
+    height: 14vmax;
+    width: 12vmax;
+}
+.top-png{
+    position: absolute;
+    margin-left:19vmax ;
+    height: 2.1vmax;
+    width: 2vmax;
+}
+
+/*----------- Footer css--------- */
+
+.footer{
+    width: 100vw;
+    background-color: black;
+    color: grey;
+    font-size: small;
+    /* margin-top: 500px; */
+}
+
+.foot-ul>li{
+    list-style-type: none;
+}
+.spanish-btn{
+    border:solid 1px grey;
+    background-color: black;
+    height: 50px;
     width: 100px;
-    background-color: white;
-    border: none;
-    justify-content: center;
-    display: flex;
-    border-radius: 5px;
-    margin-left: 10px;
-    font-weight: bold;
-    padding-top: 5px;
+    color: grey;
 }
-.buttons{
-    display: flex;
+.foot-1{
+    margin-left: 310px;
 }
-#p{
-    margin-top: 5px;
-    margin-left: 3px;
+li{
+    margin-bottom: 20px;
 }
-#img{
-    height: 18px;
-    margin-top: 3px;
-}
-#add{
-    margin-left: 1478px;
-    filter: invert(1);
-    margin-top: 25px;
-}
-.see{
-    margin-top: 40px;
-    margin-left: 60px;
-}
-#see1{
-    font-weight: bold;
-    color: white;
-}
-#arrowright{
-    height: 10px;
-    filter: invert(1);
-}
-.stack1 {
-    display: flex;
-    margin-left: 30px;
-    justify-content: space-evenly;
-    margin-top: -30px;
-}
-#stack1{
-    border-radius: 7px;
-}
-#top{
-    color: white;
-    font-weight: bold;
-    font-size: large;
+.foot-2,.foot-3,.foot-4{
     margin-top: 50px;
-    margin-left: 60px;
+    margin-right: 150px;
 }
-#number{
-    height: 200px;
-    position: relative;
-    left: 15px;
-    z-index: -1;
+.pngs{
+    margin-right: 20px;
+} 
+
+@media only screen and (max-width:426px){
+    body{
+        overflow-x: hidden;
+    }
+    /* ---------Navbar----------- */
+    .top{
+        width: 100vmin;
+        height: 70vmax;
+        background-repeat: no-repeat;
+        box-shadow: none;
+    }
+    #netflix-txt{
+        margin-right: 0;
+        width: 80px;
+        height: 20px;
+    }
+    .nav-left p{
+        display: none;
+    }
+    .navbar{
+        padding-left: 15px;
+        padding-top: 10px;    
+    }
+    .nav-right{
+        margin: 0;
+    }
+    .nav-right img{
+        height: 18px;
+        width: 18px;
+        margin-right: 10px;
+    }
+    #angrybird {
+        height: 25px;
+        width: 23px;
+    }
+    .big-txt{
+        margin-top: 200px;
+        margin-left: 30px;
+    }
+    #Maid{
+        font-size: 85px;
+    }
+    .play{
+        width: 68px;
+        height: 35px;
+    }
+    #play-btn{
+        width: 15px;
+        height: 15px;
+    }
+    .info{
+        width: 100px;
+        height: 35px;
+    }
+    #info-btn{
+        margin-left: 6px;
+        margin-right: 5px;
+    }
+
+    /* ---------Middle body-------- */
+
+    .main-body{
+        margin-top: -50px;
+    }
+    .category{
+        font-size: 20px;
+        margin-left: 30px;
+        margin-bottom: 10px;
+    }
+    .items{
+        flex-direction: column;
+    }
+    .see-again , .top-10{
+        margin-bottom: 80px;
+    }
+    .imgs-row{
+        width: 80vmax;
+        height: 30vmax;
+        margin-left:-60px;
+        margin-bottom: 50px;
+    }
+    .imgs-2nd-row{
+        margin-left: 0px;
+        width: 45vw;
+        height: 27vh;
+    }
+    .imgs-2nd-row-1st{
+        margin-left: 0px;
+        width: 45vw;
+        height: 27vh;
+    }
+    .top-png{
+        margin-left:375px ;
+    }
+    #six-rank{
+        display: none;
+    }
+    .rank{
+        margin-left: 60px;
+    }
+    .add{
+        margin-top: 380px;
+    }
+    /* footer css */
+    .footer{
+        width: 25vmax;
+    }
+    .foot-1{
+        margin-left: 10px;
+    }
+    .foot-1, .foot-3, .foot-4{
+        margin-right: 10px;
+    }
+    .foot-3{
+        margin-left: -120px;
+    }
 }
-.stack2{
-    margin-top: 7px;
-    display: flex;
-    justify-content: space-evenly;
-    margin-left: -50px;
+@media only screen and (max-width:376px){
+    body{
+        overflow-x: hidden;
+    }
+    .top{
+        width: 100vmin;
+        height: 70vmax;
+        background-repeat: no-repeat;
+        box-shadow: none;
+    }
+    .imgs-row{
+        width: 70vmax;
+        height: 28vmax;
+        margin-left:-40px;
+        margin-bottom: 50px;
+    }
+    .rank{
+        margin-left: 40px;
+    }
+    .top-png{
+        margin-left:340px ;
+    }
+    .footer{
+        font-size: 13px;
+        width: 25vmax;
+    }
+    .foot-2{
+        margin-left: -44px;
+    }
+    .foot-3{
+        margin-left: -140px;
+    }
 }
-.stack{
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 7px;
-    margin-left: 30px;
+@media only screen and (max-width:320px){
+    body{
+        overflow-x: hidden;
+    }
+    .top{
+        width: 100vmin;
+        height: 70vmax;
+        background-repeat: no-repeat;
+        box-shadow: none;
+    }
+    .imgs-row{
+        width: 60vmax;
+        height: 25vmax;
+        margin-left:-40px;
+        margin-bottom: 50px;
+    }
+    .rank{
+        margin-left: 13px;
+    }
+    .top-png{
+        margin-left:290px ;
+    }
+    .footer{
+        font-size: 10px;
+        width: 25vmax;
+    }
+    .foot-2{
+        margin-left: -44px;
+    }
+    .foot-3{
+        margin-left: -140px;
+    }
 }
-.flex{
-    display: flex;
-    color: grey;
-    margin-top: 100px;
-    justify-content: space-evenly;
-    line-height: 35px;
-}
-.images{
-    filter: invert(0.5);
-}
-.btn{
-    height: 40px;
-    width: 100px;
-    background-color: transparent;
-    color: gray;
-    border: 1px solid grey;
-    margin-top: 20px;
-}
-.done{
-    color: grey;
-    margin-left: 198px;
-    margin-top: 30px;
-}
+
